<resources>
    <string name="app_name">Let\'s Cook</string>
    <string name="splash">Welcome</string>
    <string name="breakf">BreakFast</string>
    <string name="breakTitle">BreakFast Recipes</string>
    <string name="credit1"><a href="https://www.bbcgoodfood.com/recipes/sausage-bean-bacon-bake">Inspiration from:BBC goodFood</a> </string>
    <string name="breakRecipeTitle1">Sausage, bean &amp; bacon bake</string>
    <string name="breakRecipeSubtitle1"> Homemade baked beans, chipolatas, bacon and fried eggs</string>
    <string name="SausageBeanBaconBake"><b><big>Sausage, bean &amp; bacon bake</big></b>

        \n\n<li>12 chipolatas.</li>
        \n\n<li>200g pack smoked dry-cured bacon lardons.</li>
      \n\n<li>4 tbsp sunflower oil.</li>
       \n\n<li>680g bottle passata.</li>
      \n\n<li>1 tbsp sweet smoked paprika.</li>
       \n\n<li>3 tbsp tomato purée.</li>
       \n\n<li>1 tbsp brown sugar.</li>
       \n\n<li>100g brown sauce.</li>
       \n\n<li>3 x 400g cans cannellini beans, drained and rinsed.</li>
       \n\n<li>6 eggs.</li>
        \n\n<li>piles of hot buttered toast, to serve.</li>

    </string>
    <string name="Step1">Heat oven to 220C/200C fan/gas 7. Toss the chipolatas, bacon lardons and 1 tbsp of the oil together in a large roasting tin.
                             Roast for 20-30 mins until everything is turning brown and crisp – you may want to tip off any liquid and stir it halfway.
                             Use a fish slice to scrape up any stuck bits.</string>
    <string name="Step2">Whisk together the passata, paprika, tomato purée, sugar, brown sauce,
                             250ml water,a little salt and lots of pepper. Stir into the tin with the beans.
                             Can be made 1 day ahead – cool first, tip into a plastic container, then chill.</string>
    <string name="Step3">Put the tin back in the oven and bake for another 20 mins until thickened and bubbling
                           (add another 10 mins if cooking from chilled).</string>
    <string name="Step4">Turn off the oven but leave the tin in to keep warm while you fry the eggs.
                            Heat the remaining oil in a large frying pan, crack in the eggs and fry them to your liking.
                            Serve the fried eggs with the sausage bake and plenty of hot buttered toast.</string>
    <string name="credit2"><a href="http://www.shutterbean.com/2016/spinach-egg-breakfast-sandwich/">Inspiration from: shutterbean</a> </string>
    <string name="breakRecipeTitle2">Spinach egg breakfast sandwich</string>
    <string name="breakRecipeSubtitle2"> Homemade,easy and fast Spinach egg breakfast sandwich </string>
    <string name="SpinachEggSandwich"><b><big>Spinach egg breakfast sandwich</big></b>

        \n\n<li>2 slices sourdough bread.</li>
        \n\n<li>1 teaspoon olive oil.</li>
      \n\n<li>2 cups  baby spinach.</li>
       \n\n<li>1/4 teaspoon red pepper flakes.</li>
      \n\n<li>1 tablespoon pesto.</li>
       \n\n<li>1/2 avocado, thinly sliced.</li>
       \n\n<li>2 large eggs.</li>
       \n\n<li>1/4 cup shredded cheddar cheese.</li>
       \n\n<li>salt + pepper.</li>
        \n\n<li><bold>NB:Grill or toast sourdough bread and set aside.</bold></li>


    </string>
    <string name="Step1Of2">Add olive oil to a small non-stick skillet over medium-high heat and sauté
                            the baby spinach with red pepper flakes until spinach is wilted, about 2-3 minutes.</string>
    <string name="Step2Of2">Set spinach aside and wipe skillet clean.</string>
    <string name="Step3Of2">Spray skillet with cooking spray. </string>
    <string name="Step4Of2"> Pour eggs in the skillet and let eggs set about 2–3 minutes.</string>
    <string name="Step5Of2">Place shredded cheese in the center of the egg and season with salt &amp; pepper</string>
    <string name="Step6Of2"> Fold the sides into the center and fold in half again so you’ve created a square pocket of egg.</string>
    <string name="Step7Of2"> Spread pesto on one slice of bread and avocado onto the other. Season smashed avocado with salt. </string>
    <string name="Step8Of2">Place spinach onto the side with pesto followed by egg. </string>
    <string name="Step9Of2">Top egg with avocado smashed toast and serve hot. </string>
    <string name="credit3"><a href="https://veggieprimer.com/breakfast-pizza-peanut-butter-banana/">Inspiration from:Veggie Primer</a> </string>
    <string name="breakRecipeTitle3">Breakfast Pizza: Peanut Butter Banana</string>
    <string name="breakRecipeSubtitle3"> Breakfast pizza is especially made for the first meal of the day </string>
    <string name="PeanutButterBanana"><b><big>Peanut Butter Banana</big></b>

        \n\n<li>1 large tortilla frozen.</li>
        \n\n<li>1/4 cup natural peanut butter.</li>
      \n\n<li>1/2 banana diced.</li>
       \n\n<li>1 Tbsp. raisins.</li>
      \n\n<li>1 Tbsp. raw sunflower seeds.</li>
       \n\n<li>3-4 dashes cinnamon.</li>



    </string>
    <string name="Step1Of3">Preheat toaster oven to 400 degrees. (Use pizza and convection settings if available.).</string>
    <string name="Step2Of3">Place frozen tortilla on a pizza screen.</string>
    <string name="Step3Of3">Spread a thin layer of peanut butter on the tortilla to within ½ inch from the edge. </string>
    <string name="Step4Of3"> Sprinkle diced banana, raisins and sunflower seeds evenly over the peanut butter.</string>
    <string name="Step5Of3">Add 3–4 dashes of cinnamon.</string>
    <string name="Step6Of3"> Place pizza in the oven and bake for approximately 4 minutes or until edges of the tortilla begin to turn brown.</string>
    <string name="Step7Of3"> Allow pizza to cool for 2 minutes on a wire rack – then slice and enjoy. </string>
    <string name="credit4"><a href="https://www.amazon.com/Healthy-Easy-Slow-Cooker-Cookbook/dp/1723935786">Jones, Jean. Healthy &amp; Easy Slow Cooker Cookbook: Delicious &amp;
        Quick Meals That Can Give You More Energy (Kindle Locations 173-176). Kindle Edition.</a> </string>
    <string name="breakRecipeTitle4">Spiced Onion Eggs</string>
    <string name="breakRecipeSubtitle4"> Homemade,affordable and fast preparation </string>
    <string name="SpicedOnion"><b><big>Spiced Onion Eggs</big></b>

        \n\n<li>2 tablespoons green onions, chopped.</li>
        \n\n<li>1/ 2 cup goat milk.</li>
      \n\n<li>1/ 2 teaspoon turmeric powder.</li>
       \n\n<li>2 tablespoons olive oil .</li>
      \n\n<li>4 eggs .</li>
       \n\n<li>1/ 4 teaspoon garlic powder .</li>
       \n\n<li>1/ 2 teaspoon sesame seeds.</li>
       \n\n<li>Pepper and salt as needed.</li>



    </string>
    <string name="Step1Of4">In a bowl (medium-large size), whisk the eggs and milk with a pinch of salt. .</string>
    <string name="Step2Of4">Take your slow cooker and open its top lid.</string>
    <string name="Step3Of4">Gently grease inside surface of its cooking pot using cooking spray.  </string>
    <string name="Step4Of4">Add the mix and other ingredients inside the cooking pot. </string>
    <string name="Step5Of4">Stir gently to combine well. Close the lid and make sure that the valve is sealed properly. </string>
    <string name="Step6Of4"> Press “HIGH” cooking function; set cooking time to 2 hours.</string>
    <string name="Step7Of4"> After the timer reads zero, open the lid and transfer the cooked recipe to serving plate/ container. </string>
    <string name="Step8Of4">Serve warm and enjoy! </string>
    <string name="credit5"><a href="https://www.amazon.com/Healthy-Easy-Slow-Cooker-Cookbook/dp/1723935786">Jones, Jean. Healthy &amp;
        Easy Slow Cooker Cookbook: Delicious &amp; Quick Meals That Can Give You More Energy (Kindle Locations 329-337).
        Kindle Edition.</a> </string>
    <string name="breakRecipeTitle5">Broccoli Cheesy Eggs</string>
    <string name="breakRecipeSubtitle5"> Affordable and easy preparation </string>
    <string name="BroccoliCheesy"><b><big>Broccoli Cheesy Eggs</big></b>

        \n\n<li>4 large eggs, beaten.</li>
        \n\n<li>Pepper and salt as needed .</li>
      \n\n<li>3/ 4 pound of broccoli, make florets .</li>
       \n\n<li>1 spring onion, chopped  .</li>
      \n\n<li>1/ 4 cup grated goat cheese .</li>




    </string>
    <string name="Step1Of5">In a skillet or saucepan; add the oil, shallots, broccoli, and salt. Cook over the medium cooking
        flame until turn translucent and softened for 2 minutes..</string>
    <string name="Step2Of5">Whisk the eggs with a pinch of salt in a bowl (medium-large size). </string>
    <string name="Step3Of5">Take your slow cooker and open its top lid.   </string>
    <string name="Step4Of5">Add the egg mix over the broccoli, and sprinkle with the goat cheese.  </string>
    <string name="Step5Of5">Close the lid and make sure that the valve is sealed properly.  </string>
    <string name="Step6Of5"> Press “LOW” cooking function; set cooking time to 3–4 hours. </string>
    <string name="Step7Of5"> After the timer reads zero, open the lid and transfer the cooked recipe to serving plate/ container.  </string>
    <string name="Step8Of5">Serve warm and enjoy! </string>
    <string name="credit6"><a href="https://www.dietdoctor.com/recipes/keto-pancakes-berries-whipped-cream"> 
        Recipe Authored:By Anne Aobadia</a> </string>
    <string name="breakRecipeTitle6">Keto pancakes with berries and whipped cream</string>
    <string name="breakRecipeSubtitle6"> Try these incredible keto cottage cheese pancakes and you’ll never go back to regular flapjacks! </string>
    <string name="pancakeberries"><b><big>Keto pancakes with berries and whipped cream</big></b>

        \n\n<li>4 eggs.</li>
        \n\n<li>7 oz. cottage cheese .</li>
      \n\n<li>1 tbsp ground psyllium husk powder .</li>
       \n\n<li>2 oz. butter or coconut oil.</li>
     \n\n\n<li><b><big>Toppings:</big></b></li>
        \n\n<li>½ cup fresh raspberries or fresh .</li>
        \n\n<li>blueberries or fresh strawberries.</li>
        \n\n<li>1 cup heavy whipping cream .</li>

    </string>
    <string name="Step1Of6">Add eggs, cottage cheese and psyllium husk to a medium size bowl
        and mix together. Let sit for 5-10 minutes to thicken up a bit.</string>
    <string name="Step2Of6">Heat up butter or oil in a non-stick skillet. Fry the pancakes on medium-low heat for 3 to 4 minutes on each side.
        Don\'t make them too big or they will be hard to flip.</string>
    <string name="Step3Of6">Add cream to a separate bowl and whip until soft peaks form.   </string>
    <string name="Step4Of6">Serve the pancakes with the whipped cream and berries of your choice. </string>
    <string name="Step5Of6"><b>Serving suggestions:</b>
      If you feel like serving them with something other than berries and whipped cream,
        we suggest trying our raspberry jam, butter cream or hazelnut spread. </string>
    <string name="credit7"><a href="https://www.dietdoctor.com/recipes/keto-french-pancakes">
        Recipe Authored:By Anne Aobadia</a> </string>
    <string name="breakRecipeTitle7">Keto French pancakes</string>
    <string name="breakRecipeSubtitle7">  Perfect for breakfast, brunch or dessert. </string>
    <string name="breakRecipeTitle8">Classic Chocolate Cake Donuts</string>
    <string name="breakRecipeSubtitle8">Coconut flour dipped in a dreamy sugar-free chocolate glaze.  </string>
    <string name="breakRecipeTitle9">Blueberry Oatmeal Pancakes </string>
    <string name="breakRecipeSubtitle9">Blueberry oatmeal pancakes that come together quickly and are totally delicious.  </string>
    <string name="breakRecipeTitle10">Autumn Sweet Potato Hash with Spicy Italian Sausage</string>
    <string name="breakRecipeSubtitle10"> Autumn Sweet Potato Hash is fall’s answer to a savory late morning breakfast.   </string>
    <string name="cms">More to Come Soon......</string>
</resources>