<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BreakFast"
    android:orientation="vertical"
    tools:showIn="@layout/activity_break_fast">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breakTitle"
            android:textSize="18sp"
            android:textColor="#4a4a4a"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/recipe1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:background="@drawable/layout_border">

            <ImageView
                android:layout_marginStart="5dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/brunch"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="#FFF"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeTitle1"
                    android:textColor="#4a4a4a"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/breakRecipeSubtitle1"
                    android:textSize="14sp" />

            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:id="@+id/recipe2"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:src="@drawable/layout_border">




            <ImageView
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/beanspinach"/>
            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeTitle2"
                    android:textSize="18sp"
                    android:textColor="#4a4a4a"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeSubtitle2"
                    android:textSize="14sp" />

            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:id="@+id/recipe3"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:src="@drawable/layout_border">




            <ImageView
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/breakfastpizza"/>
            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeTitle3"
                    android:textSize="18sp"
                    android:textColor="#4a4a4a"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeSubtitle3"
                    android:textSize="14sp" />

            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:id="@+id/recipe4"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:src="@drawable/layout_border">




            <ImageView
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/spicedbreak"/>
            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeTitle4"
                    android:textSize="18sp"
                    android:textColor="#4a4a4a"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeSubtitle4"
                    android:textSize="14sp" />

            </LinearLayout>






        </LinearLayout>

        <LinearLayout
            android:id="@+id/recipe5"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:src="@drawable/layout_border">




            <ImageView
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/recipebroccoli"/>
            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeTitle5"
                    android:textSize="18sp"
                    android:textColor="#4a4a4a"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeSubtitle5"
                    android:textSize="14sp" />

            </LinearLayout>






        </LinearLayout>
        <LinearLayout
            android:id="@+id/recipe6"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:src="@drawable/layout_border">




            <ImageView
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ketopancakeswithblueberries"/>
            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeTitle6"
                    android:textSize="18sp"
                    android:textColor="#4a4a4a"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeSubtitle6"
                    android:textSize="14sp" />

            </LinearLayout>






        </LinearLayout>

        <LinearLayout
            android:id="@+id/recipe7"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:src="@drawable/layout_border">




            <ImageView
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/frenchpancakes"/>
            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeTitle7"
                    android:textSize="18sp"
                    android:textColor="#4a4a4a"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeSubtitle7"
                    android:textSize="14sp" />

            </LinearLayout>






        </LinearLayout>

        <LinearLayout
            android:id="@+id/recipe8"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:src="@drawable/layout_border">




            <ImageView
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/chocolatecakedonuts"/>
            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeTitle8"
                    android:textSize="18sp"
                    android:textColor="#4a4a4a"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeSubtitle8"
                    android:textSize="14sp" />

            </LinearLayout>






        </LinearLayout>

        <LinearLayout
            android:id="@+id/recipe9"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:src="@drawable/layout_border">




            <ImageView
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/blueberryoatmeal"/>
            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeTitle9"
                    android:textSize="18sp"
                    android:textColor="#4a4a4a"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeSubtitle9"
                    android:textSize="14sp" />

            </LinearLayout>






        </LinearLayout>

        <LinearLayout
            android:id="@+id/recipe10"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:src="@drawable/layout_border">




            <ImageView
                android:layout_marginStart="10dp"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/sweetpotatohash"/>
            <LinearLayout
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeTitle10"
                    android:textSize="18sp"
                    android:textColor="#4a4a4a"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_marginTop="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakRecipeSubtitle10"
                    android:textSize="14sp" />

            </LinearLayout>






        </LinearLayout>



        <LinearLayout

            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@color/darkgray"
            android:src="@drawable/layout_border">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cms"
            android:textAlignment="center"
            android:textSize="16sp"/>


        </LinearLayout>


    </LinearLayout>



</ScrollView>